cmake_minimum_required(VERSION 3.10)
project(NoxTLS VERSION 0.1.4 LANGUAGES C)

# Resolve NoxTLS paths from this directory by default, while allowing parent override.
if(NOT DEFINED NOXTLS_PROJECT_ROOT)
  set(NOXTLS_PROJECT_ROOT "${CMAKE_CURRENT_SOURCE_DIR}" CACHE PATH "NoxTLS source root")
endif()

# Set C standard
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

# Build options
option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
option(BUILD_TESTS "Build test applications" ON)
option(BUILD_APPLICATIONS "Build application executables (demos, tests, etc.)" ON)
set(NOXTLS_PROFILE "default" CACHE STRING "Feature profile: default|minimal_tls_client|tls_server_pki|crypto_only|fips_like_profile")
set_property(CACHE NOXTLS_PROFILE PROPERTY STRINGS default minimal_tls_client tls_server_pki crypto_only fips_like_profile)

# Allow command-line overrides (-DNOXTLS_CFG_FEATURE_*=ON/OFF) while keeping sane defaults.
macro(noxtls_set_default var value)
  if(NOT DEFINED ${var})
    set(${var} ${value})
  endif()
endmacro()

# Default feature matrix (full build).
noxtls_set_default(NOXTLS_CFG_FEATURE_HASH ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_ENCRYPTION ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_DRBG ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_PKC ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_CERT ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_TLS ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_TLS10 OFF)
noxtls_set_default(NOXTLS_CFG_FEATURE_TLS11 OFF)
noxtls_set_default(NOXTLS_CFG_FEATURE_TLS12 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_TLS13 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_DTLS ON)
noxtls_set_default(NOXTLS_CFG_HAVE_CERT_WRITE OFF)

noxtls_set_default(NOXTLS_CFG_FEATURE_MD4 OFF)
noxtls_set_default(NOXTLS_CFG_FEATURE_MD5 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_SHA1 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_SHA224 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_SHA256 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_SHA384 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_SHA512 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_SHA3 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_RIPEMD160 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_BLAKE2 ON)

noxtls_set_default(NOXTLS_CFG_FEATURE_AES ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_AES_128 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_AES_192 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_AES_256 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_AES_ECB ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_AES_CBC ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_AES_CTR ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_AES_CFB ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_AES_OFB ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_AES_XTS ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_AES_GCM ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_AES_CCM ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_AES_CMAC ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_ARIA ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_CAMELLIA ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_CHACHA20_POLY1305 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_DES ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_RC4 ON)

noxtls_set_default(NOXTLS_CFG_FEATURE_RSA ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_ECC ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_ECDSA ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_ECDH ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_DH ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_X25519 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_X448 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_ED25519 ON)
noxtls_set_default(NOXTLS_CFG_FEATURE_ED448 OFF)
noxtls_set_default(NOXTLS_CFG_FEATURE_DSA ON)

if(NOXTLS_PROFILE STREQUAL "minimal_tls_client")
  set(NOXTLS_CFG_FEATURE_MD4 OFF)
  set(NOXTLS_CFG_FEATURE_MD5 OFF)
  set(NOXTLS_CFG_FEATURE_SHA1 OFF)
  set(NOXTLS_CFG_FEATURE_SHA384 OFF)
  set(NOXTLS_CFG_FEATURE_SHA512 OFF)
  set(NOXTLS_CFG_FEATURE_SHA3 OFF)
  set(NOXTLS_CFG_FEATURE_RIPEMD160 OFF)
  set(NOXTLS_CFG_FEATURE_BLAKE2 OFF)
  set(NOXTLS_CFG_FEATURE_ARIA OFF)
  set(NOXTLS_CFG_FEATURE_CAMELLIA OFF)
  set(NOXTLS_CFG_FEATURE_CHACHA20_POLY1305 OFF)
  set(NOXTLS_CFG_FEATURE_DES OFF)
  set(NOXTLS_CFG_FEATURE_RC4 OFF)
  set(NOXTLS_CFG_FEATURE_AES_XTS OFF)
  set(NOXTLS_CFG_FEATURE_AES_CCM OFF)
  set(NOXTLS_CFG_FEATURE_RSA OFF)
  set(NOXTLS_CFG_FEATURE_ECDSA OFF)
  set(NOXTLS_CFG_FEATURE_DH OFF)
  set(NOXTLS_CFG_FEATURE_ED25519 OFF)
  set(NOXTLS_CFG_FEATURE_ED448 OFF)
  set(NOXTLS_CFG_FEATURE_DSA OFF)
  set(NOXTLS_CFG_FEATURE_DTLS OFF)
elseif(NOXTLS_PROFILE STREQUAL "tls_server_pki")
  set(NOXTLS_CFG_FEATURE_MD4 OFF)
  set(NOXTLS_CFG_FEATURE_MD5 OFF)
  set(NOXTLS_CFG_FEATURE_SHA1 OFF)
  set(NOXTLS_CFG_FEATURE_SHA3 OFF)
  set(NOXTLS_CFG_FEATURE_RIPEMD160 OFF)
  set(NOXTLS_CFG_FEATURE_BLAKE2 OFF)
  set(NOXTLS_CFG_FEATURE_ARIA OFF)
  set(NOXTLS_CFG_FEATURE_CAMELLIA OFF)
  set(NOXTLS_CFG_FEATURE_DES OFF)
  set(NOXTLS_CFG_FEATURE_RC4 OFF)
  set(NOXTLS_CFG_FEATURE_AES_XTS OFF)
  set(NOXTLS_CFG_FEATURE_AES_CCM OFF)
  set(NOXTLS_CFG_FEATURE_DH OFF)
  set(NOXTLS_CFG_HAVE_CERT_WRITE ON)
elseif(NOXTLS_PROFILE STREQUAL "crypto_only")
  set(NOXTLS_CFG_FEATURE_CERT OFF)
  set(NOXTLS_CFG_FEATURE_TLS OFF)
  set(NOXTLS_CFG_FEATURE_TLS12 OFF)
  set(NOXTLS_CFG_FEATURE_TLS13 OFF)
  set(NOXTLS_CFG_FEATURE_DTLS OFF)
  set(NOXTLS_CFG_HAVE_CERT_WRITE OFF)
elseif(NOXTLS_PROFILE STREQUAL "fips_like_profile")
  set(NOXTLS_CFG_FEATURE_MD4 OFF)
  set(NOXTLS_CFG_FEATURE_MD5 OFF)
  set(NOXTLS_CFG_FEATURE_SHA1 OFF)
  set(NOXTLS_CFG_FEATURE_SHA3 OFF)
  set(NOXTLS_CFG_FEATURE_RIPEMD160 OFF)
  set(NOXTLS_CFG_FEATURE_BLAKE2 OFF)
  set(NOXTLS_CFG_FEATURE_ARIA OFF)
  set(NOXTLS_CFG_FEATURE_CAMELLIA OFF)
  set(NOXTLS_CFG_FEATURE_CHACHA20_POLY1305 OFF)
  set(NOXTLS_CFG_FEATURE_DES OFF)
  set(NOXTLS_CFG_FEATURE_RC4 OFF)
  set(NOXTLS_CFG_FEATURE_AES_XTS OFF)
  set(NOXTLS_CFG_FEATURE_AES_CCM OFF)
  set(NOXTLS_CFG_FEATURE_DH OFF)
  set(NOXTLS_CFG_FEATURE_X25519 OFF)
  set(NOXTLS_CFG_FEATURE_X448 OFF)
  set(NOXTLS_CFG_FEATURE_ED25519 OFF)
  set(NOXTLS_CFG_FEATURE_DTLS OFF)
elseif(NOT NOXTLS_PROFILE STREQUAL "default")
  message(FATAL_ERROR "Unknown NOXTLS_PROFILE='${NOXTLS_PROFILE}'")
endif()

macro(noxtls_define_bool name value)
  if(${value})
    add_compile_definitions(${name}=1)
  else()
    add_compile_definitions(${name}=0)
  endif()
endmacro()

if(NOXTLS_PROFILE STREQUAL "minimal_tls_client")
  add_compile_definitions(NOXTLS_PROFILE_MINIMAL_TLS_CLIENT=1)
elseif(NOXTLS_PROFILE STREQUAL "tls_server_pki")
  add_compile_definitions(NOXTLS_PROFILE_TLS_SERVER_PKI=1)
elseif(NOXTLS_PROFILE STREQUAL "crypto_only")
  add_compile_definitions(NOXTLS_PROFILE_CRYPTO_ONLY=1)
elseif(NOXTLS_PROFILE STREQUAL "fips_like_profile")
  add_compile_definitions(NOXTLS_PROFILE_FIPS_LIKE=1)
endif()

noxtls_define_bool(NOXTLS_FEATURE_HASH NOXTLS_CFG_FEATURE_HASH)
noxtls_define_bool(NOXTLS_FEATURE_ENCRYPTION NOXTLS_CFG_FEATURE_ENCRYPTION)
noxtls_define_bool(NOXTLS_FEATURE_DRBG NOXTLS_CFG_FEATURE_DRBG)
noxtls_define_bool(NOXTLS_FEATURE_PKC NOXTLS_CFG_FEATURE_PKC)
noxtls_define_bool(NOXTLS_FEATURE_CERT NOXTLS_CFG_FEATURE_CERT)
noxtls_define_bool(NOXTLS_FEATURE_TLS NOXTLS_CFG_FEATURE_TLS)
noxtls_define_bool(NOXTLS_FEATURE_TLS10 NOXTLS_CFG_FEATURE_TLS10)
noxtls_define_bool(NOXTLS_FEATURE_TLS11 NOXTLS_CFG_FEATURE_TLS11)
noxtls_define_bool(NOXTLS_FEATURE_TLS12 NOXTLS_CFG_FEATURE_TLS12)
noxtls_define_bool(NOXTLS_FEATURE_TLS13 NOXTLS_CFG_FEATURE_TLS13)
noxtls_define_bool(NOXTLS_FEATURE_DTLS NOXTLS_CFG_FEATURE_DTLS)
noxtls_define_bool(NOXTLS_HAVE_CERT_WRITE NOXTLS_CFG_HAVE_CERT_WRITE)

noxtls_define_bool(NOXTLS_FEATURE_MD4 NOXTLS_CFG_FEATURE_MD4)
noxtls_define_bool(NOXTLS_FEATURE_MD5 NOXTLS_CFG_FEATURE_MD5)
noxtls_define_bool(NOXTLS_FEATURE_SHA1 NOXTLS_CFG_FEATURE_SHA1)
noxtls_define_bool(NOXTLS_FEATURE_SHA224 NOXTLS_CFG_FEATURE_SHA224)
noxtls_define_bool(NOXTLS_FEATURE_SHA256 NOXTLS_CFG_FEATURE_SHA256)
noxtls_define_bool(NOXTLS_FEATURE_SHA384 NOXTLS_CFG_FEATURE_SHA384)
noxtls_define_bool(NOXTLS_FEATURE_SHA512 NOXTLS_CFG_FEATURE_SHA512)
noxtls_define_bool(NOXTLS_FEATURE_SHA3 NOXTLS_CFG_FEATURE_SHA3)
noxtls_define_bool(NOXTLS_FEATURE_RIPEMD160 NOXTLS_CFG_FEATURE_RIPEMD160)
noxtls_define_bool(NOXTLS_FEATURE_BLAKE2 NOXTLS_CFG_FEATURE_BLAKE2)

noxtls_define_bool(NOXTLS_FEATURE_AES NOXTLS_CFG_FEATURE_AES)
noxtls_define_bool(NOXTLS_FEATURE_AES_128 NOXTLS_CFG_FEATURE_AES_128)
noxtls_define_bool(NOXTLS_FEATURE_AES_192 NOXTLS_CFG_FEATURE_AES_192)
noxtls_define_bool(NOXTLS_FEATURE_AES_256 NOXTLS_CFG_FEATURE_AES_256)
noxtls_define_bool(NOXTLS_FEATURE_AES_ECB NOXTLS_CFG_FEATURE_AES_ECB)
noxtls_define_bool(NOXTLS_FEATURE_AES_CBC NOXTLS_CFG_FEATURE_AES_CBC)
noxtls_define_bool(NOXTLS_FEATURE_AES_CTR NOXTLS_CFG_FEATURE_AES_CTR)
noxtls_define_bool(NOXTLS_FEATURE_AES_CFB NOXTLS_CFG_FEATURE_AES_CFB)
noxtls_define_bool(NOXTLS_FEATURE_AES_OFB NOXTLS_CFG_FEATURE_AES_OFB)
noxtls_define_bool(NOXTLS_FEATURE_AES_XTS NOXTLS_CFG_FEATURE_AES_XTS)
noxtls_define_bool(NOXTLS_FEATURE_AES_GCM NOXTLS_CFG_FEATURE_AES_GCM)
noxtls_define_bool(NOXTLS_FEATURE_AES_CCM NOXTLS_CFG_FEATURE_AES_CCM)
noxtls_define_bool(NOXTLS_FEATURE_AES_CMAC NOXTLS_CFG_FEATURE_AES_CMAC)
noxtls_define_bool(NOXTLS_FEATURE_ARIA NOXTLS_CFG_FEATURE_ARIA)
noxtls_define_bool(NOXTLS_FEATURE_CAMELLIA NOXTLS_CFG_FEATURE_CAMELLIA)
noxtls_define_bool(NOXTLS_FEATURE_CHACHA20_POLY1305 NOXTLS_CFG_FEATURE_CHACHA20_POLY1305)
noxtls_define_bool(NOXTLS_FEATURE_DES NOXTLS_CFG_FEATURE_DES)
noxtls_define_bool(NOXTLS_FEATURE_RC4 NOXTLS_CFG_FEATURE_RC4)

noxtls_define_bool(NOXTLS_FEATURE_RSA NOXTLS_CFG_FEATURE_RSA)
noxtls_define_bool(NOXTLS_FEATURE_ECC NOXTLS_CFG_FEATURE_ECC)
noxtls_define_bool(NOXTLS_FEATURE_ECDSA NOXTLS_CFG_FEATURE_ECDSA)
noxtls_define_bool(NOXTLS_FEATURE_ECDH NOXTLS_CFG_FEATURE_ECDH)
noxtls_define_bool(NOXTLS_FEATURE_DH NOXTLS_CFG_FEATURE_DH)
noxtls_define_bool(NOXTLS_FEATURE_X25519 NOXTLS_CFG_FEATURE_X25519)
noxtls_define_bool(NOXTLS_FEATURE_X448 NOXTLS_CFG_FEATURE_X448)
noxtls_define_bool(NOXTLS_FEATURE_ED25519 NOXTLS_CFG_FEATURE_ED25519)
noxtls_define_bool(NOXTLS_FEATURE_ED448 NOXTLS_CFG_FEATURE_ED448)
noxtls_define_bool(NOXTLS_FEATURE_DSA NOXTLS_CFG_FEATURE_DSA)

# Compiler flags
if(MSVC)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W4 /wd4711 /wd5045 /wd4668")
  set(CMAKE_C_FLAGS_DEBUG "/Od /Zi")
  set(CMAKE_C_FLAGS_RELEASE "/O2 /DNDEBUG")
else()
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
  set(CMAKE_C_FLAGS_DEBUG "-O0 -g")
  set(CMAKE_C_FLAGS_RELEASE "-O2 -DNDEBUG")
endif()
# Option to treat warnings as errors (can be enabled with -DWARNINGS_AS_ERRORS=ON)
option(WARNINGS_AS_ERRORS "Treat compiler warnings as errors" OFF)
if(WARNINGS_AS_ERRORS AND NOT MSVC)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror")
endif()

# Library root
set(NOXTLS_LIB_ROOT "${NOXTLS_PROJECT_ROOT}/noxtls-lib")

# Include directories (for all targets)
include_directories(
    ${NOXTLS_PROJECT_ROOT}
    ${NOXTLS_PROJECT_ROOT}/utility
    ${NOXTLS_PROJECT_ROOT}/applications/noxtls
    ${NOXTLS_LIB_ROOT}
    ${NOXTLS_LIB_ROOT}/common
    ${NOXTLS_LIB_ROOT}/mdigest
    ${NOXTLS_LIB_ROOT}/mdigest/md4
    ${NOXTLS_LIB_ROOT}/mdigest/md5
    ${NOXTLS_LIB_ROOT}/mdigest/sha1
    ${NOXTLS_LIB_ROOT}/mdigest/sha256
    ${NOXTLS_LIB_ROOT}/mdigest/sha512
    ${NOXTLS_LIB_ROOT}/mdigest/sha3
    ${NOXTLS_LIB_ROOT}/encryption
    ${NOXTLS_LIB_ROOT}/encryption/aria
    ${NOXTLS_LIB_ROOT}/certs
    ${NOXTLS_LIB_ROOT}/pkc
    ${NOXTLS_LIB_ROOT}/pkc/rsa
    ${NOXTLS_LIB_ROOT}/pkc/ecc
    ${NOXTLS_LIB_ROOT}/pkc/ecdsa
    ${NOXTLS_LIB_ROOT}/pkc/ecdh
    ${NOXTLS_LIB_ROOT}/drbg
    ${NOXTLS_LIB_ROOT}/tls
)

# Library components
add_subdirectory(noxtls-lib/common)
add_subdirectory(utility)
add_subdirectory(noxtls-lib/mdigest)
add_subdirectory(noxtls-lib/encryption)
add_subdirectory(noxtls-lib/mdigest/sha3)
add_subdirectory(noxtls-lib/pkc)
add_subdirectory(noxtls-lib/drbg)
if(NOXTLS_CFG_FEATURE_CERT)
  add_subdirectory(noxtls-lib/certs)
endif()
if(NOXTLS_CFG_FEATURE_TLS)
  add_subdirectory(noxtls-lib/tls)
endif()

# Applications (optional; disable with -DBUILD_APPLICATIONS=OFF for library-only or docs CI)
# All application executables go into a single "binary" folder at project root when building from here
set(NOXTLS_APPLICATIONS_BINARY_DIR "${NOXTLS_PROJECT_ROOT}/binary" CACHE PATH "Output directory for application executables")

if(BUILD_APPLICATIONS)
  add_subdirectory(applications/aes)
  add_subdirectory(applications/base64)
  if(NOXTLS_CFG_FEATURE_CERT)
    # certificate app triggers MSVC ICE (CL.exe crash); build with GCC/MinGW or WSL
    if(NOT MSVC)
      add_subdirectory(applications/certificate)
    endif()
    add_subdirectory(applications/cert)
    add_subdirectory(applications/certgen)
  endif()
  if(NOXTLS_CFG_FEATURE_TLS)
    add_subdirectory(applications/dtls_psk_demo)
    add_subdirectory(applications/dtls_psk_test)
    add_subdirectory(applications/noxtls)
    add_subdirectory(applications/tls_test)
    add_subdirectory(applications/https_client)
    add_subdirectory(applications/https_server)
  endif()
  add_subdirectory(applications/pkc)
  add_subdirectory(applications/prime)
  add_subdirectory(applications/sha)
endif()